Fixed footer flickering on scrolling

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,7 +86,7 @@ main {
 }
 
 footer {
-    bottom: 0;
+    bottom: 0 !important;
     height: 32px;
 }
 
